deployment/service.yml
kind: Service
apiVersion: v1
metadata:
  name: hello
spec:
  selector:
    app: hello
  type: NodePort
  ports:
  - port: 3000
